# A01798681_ActInt2

./: CMakeLists.txt  README.md  app.cpp  integradora.h  integradora2.cpp  main.cpp  sonar-project.properties  test.cpp
.github/workflows/: build.yml
